--- a/package.json
+++ b/package.json
@@ -19,5 +19,14 @@
   "homepage": "https://github.com/thinkful-ei-panda/webpack-day-george-james#readme",
   "dependencies": {
     "jquery": "^3.5.1"
+  },
+  "devDependencies": {
+    "css-loader": "^3.5.3",
+    "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.3.0",
+    "style-loader": "^1.2.1",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0"
   }
 }
