--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "#### Created for the Thinkful EI Program.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server",   
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
